--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -6,7 +6,7 @@ $("#pay_btn").click(function (e) {
   e.preventDefault();
    //$("#payform").submit(function (e) {
    
-  alert("clicked!"); 
+  //alert("clicked!"); 
    $.ajax({
       url: "/wscheckorder/",
       type: "POST",
@@ -24,7 +24,7 @@ $("#pay_btn").click(function (e) {
          
       }
   });
- alert("ajax done!"); 
+// alert("ajax done!"); 
 });
 });
 </script>
