1c fullimport webdata + migrations code1c + paperclipmediatype fix + homepage content fix

--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -20,7 +20,9 @@
 <div  style="padding-right:25px">
 <p>
   
+    <% unless @article.blank? %>
   <%=raw @article.content %>
+  <% end %>
 </p>
 </div>
 <div>
