--- a/app/views/layouts/catalog.html.erb
+++ b/app/views/layouts/catalog.html.erb
@@ -5,6 +5,7 @@
   <title>List</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag 'jquery.validate.min', 'jquery.validate.messages' %>
   <%= csrf_meta_tags %>
 </head>
 
