--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -580,6 +580,91 @@ input[type=submit]:hover{
 	width:310px;
 }
 
+.product_plain{
+	float:left;
+	width:670px;
+	height:200px;
+	margin:0px 10px 10px auto;
+	border-bottom:1px solid #eeeeee;
+	
+}
+
+.product_plain_left{
+	float:left;
+	width:200px;
+	height:200px;
+	margin:0px 0px 10px auto;
+	
+}
+
+.product_plain_right{
+	float:left;
+	width:460px;
+	height:200px;
+	margin:0px 0px 10px 0px;
+	
+}
+
+.product_plain_name{
+	
+	overflow: hidden;
+	width:400px;
+	margin: 5px 5px 5px 5px;
+	height: 17px;
+}
+
+.product_plain_name a{
+	text-decoration: none;
+	font-size:13pt;
+	color: #000000;
+}
+
+.product_plain_price{
+	height: 19px;
+	text-align: center;
+	overflow: hidden;
+	margin: 0 10px 10px 10px;
+	font-size:14pt;
+	font-family:Helvetica;
+		
+	color:#585454;
+  	
+	
+}
+.product_plain_controls{
+	float: right;
+	height: 190px;
+	width: 200px;
+	text-align: center;
+	overflow: hidden;
+	margin: 40px 0px 10px 10px;
+	font-size:14pt;
+	font-family:Helvetica;
+		
+	color:#585454;
+  	
+	
+}
+
+.product_plain_to_cart{
+	
+	position: relative;
+  	
+	
+}
+
+.product_plain_to_cart .input-group-btn{
+	float: right;
+	position: absolute;
+	top: -1px;
+	left: 80px;
+}
+.product_plain_to_cart .cartCounterSimpleCat{
+	float: right;
+	position: absolute;
+	top: 2px;
+	left: -57px;
+}
 .product_tab{
 	float:left;
 	width:220px;
