devise clear session false

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -585,7 +585,7 @@ input[type=submit]:hover{
 	width:670px;
 	height:200px;
 	margin:0px 10px 10px auto;
-	border-bottom:1px solid #eeeeee;
+	border-bottom:1px solid #dddddd;
 	
 }
 
